// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Me Query Should be able to update profile 1`] = `
Object {
  "updateProfile": Object {
    "__typename": "Profile",
    "firstName": null,
    "id": "e5efeb7b38920d3c2f05bf65bbd3a9",
    "lastName": null,
  },
}
`;

exports[`Me Query Should be able to update profile 2`] = `
Object {
  "me": Object {
    "__typename": "User",
    "firstName": "Steve",
    "id": "e57d427b38920d58da71e240fa7ec8",
    "lastName": "Kite",
    "name": "Steve Kite",
    Symbol(id): "User:e57d427b38920d58da71e240fa7ec8",
  },
  Symbol(id): "ROOT_QUERY",
}
`;

exports[`Me Query Should be able to update profile 3`] = `
Object {
  "updateProfile": Object {
    "__typename": "Profile",
    "firstName": null,
    "id": "e5efeb7b38920d3c2f05bf65bbd3a9",
    "lastName": null,
  },
}
`;

exports[`Me Query Should preserve old profile info on second createProfile call 1`] = `
Object {
  "createProfile": Object {
    "__typename": "Profile",
    "firstName": "Steve",
    "id": "e5efeb7b38920d3c2f05bf65bbd3a9",
    "lastName": "Kite",
  },
}
`;

exports[`Me Query Should preserve old profile info on second createProfile call 2`] = `
Object {
  "me": Object {
    "__typename": "User",
    "firstName": "Steve",
    "id": "e57d427b38920d58da71e240fa7ec8",
    "lastName": "Kite",
    "name": "Steve Kite",
    Symbol(id): "User:e57d427b38920d58da71e240fa7ec8",
  },
  Symbol(id): "ROOT_QUERY",
}
`;

exports[`Me Query Should return null for non-authenticated user 1`] = `
Object {
  "me": null,
  Symbol(id): "ROOT_QUERY",
}
`;

exports[`Me Query Should return profile for user with profile 1`] = `
Object {
  "me": Object {
    "__typename": "User",
    "firstName": "Steve",
    "id": "e57d427b38920d58da71e240fa7ec8",
    "lastName": "Kite",
    "name": "Steve Kite",
    Symbol(id): "User:e57d427b38920d58da71e240fa7ec8",
  },
  Symbol(id): "ROOT_QUERY",
}
`;
